Add in-progress experience page and resume. Ugh, formatting.

--- a/experience/index.html
+++ b/experience/index.html
@@ -6,6 +6,29 @@
         <link href="experience.css" type="text/css" charset="utf-8" rel="stylesheet" />
     </head>
     <body>
-        <h1>Experience</h1>
+        <div class="custom-container">
+            <h1>Experience</h1>
+            <span id="resume">My complete resume is also available <a href="Robinson_Sarah_Resume.pdf">as a PDF</a>.</span>
+            <div class="education">
+                <h2>Education</h2>
+                <div id="mhc">
+                    <!--img src="mhc-logo.png" /-->
+                    <span class="desc"><em>Mount Holyoke College</em>: Bachelor's degree in Computer Science, expected 2017.</span>
+                </div>
+                <div id="stuyvesant">
+                    <!--img src="stuy-logo.png" /-->
+                    <span class="desc"><em>Stuyvesant High School</em>: High School Diploma, received June 2013.</span>
+                </div>
+            </div>
+            <div class="tech-skills">
+                <h2>Technical Skills</h2>
+                <div>
+                    <em>Under construction</em>
+                </div>
+            </div>
+            <div class="positions">
+                <!-- come up with a better name for this section -->
+            </div>
+        </div>
     </body>
 </html>
