Minute change to experience page

--- a/experience/index.html
+++ b/experience/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="custom-container">
             <h1>Experience</h1>
-            <span id="resume">My complete resume is also available <a href="Robinson_Sarah_Resume.pdf">as a PDF</a>.</span>
+            <span id="resume">My resume, complete with contact information, is also available <a href="Robinson_Sarah_Resume.pdf">as a PDF</a>.</span>
             <div class="education">
                 <h2>Education</h2>
                 <div id="mhc">
