Add skills section

--- a/experience/index.html
+++ b/experience/index.html
@@ -21,13 +21,16 @@
                 </div>
             </div>
             <div class="tech-skills">
-                <h2>Technical Skills</h2>
+                <h2>Skills</h2>
                 <div>
-                    <em>Under construction</em>
+                    <div id="proficient">Proficient with <em>Java, Python, JavaScript, HTML</em></div>
+                    <div id="prior">Prior experience with <em>PHP, SQL</em></div>
+                    
                 </div>
             </div>
-            <div class="positions">
-                <!-- come up with a better name for this section -->
+            <div class="background">
+                <h2>Background</h2>
+                <em>Under construction</em>
             </div>
         </div>
     </body>
