--- a/experience/index.html
+++ b/experience/index.html
@@ -23,9 +23,16 @@
             <div class="tech-skills">
                 <h2>Skills</h2>
                 <div>
-                    <div id="proficient">Proficient with <em>Java, Python, JavaScript, HTML</em></div>
-                    <div id="prior">Prior experience with <em>PHP, SQL</em></div>
-                    
+                    <div id="languages">
+                        <h3>Languages</h3>
+                        <div id="proficient">Proficient with <em>Java, Python, JavaScript, HTML</em></div>
+                        <div id="prior">Prior experience with <em>PHP, SQL</em></div>
+                    </div>
+                    <div id="tech-other">
+                        <h3>Other</h3>
+                        <div>Operating systems: Windows, OSX, Ubuntu (Linux)</div>
+                        <div>Editors: Eclipse, Emacs, Sublime</div>
+                    </div>
                 </div>
             </div>
             <div class="background">
