Add columns to skills portion of experience

--- a/experience/index.html
+++ b/experience/index.html
@@ -22,16 +22,16 @@
             </div>
             <div class="tech-skills">
                 <h2>Skills</h2>
-                <div>
+                <div id ="tech-content">
                     <div id="languages">
                         <h3>Languages</h3>
-                        <div id="proficient">Proficient with <em>Java, Python, JavaScript, HTML</em></div>
-                        <div id="prior">Prior experience with <em>PHP, SQL</em></div>
+                        <div id="proficient">Proficient: <em>Java, Python, JavaScript, HTML</em></div>
+                        <div id="prior">Prior experience: <em>PHP, SQL</em></div>
                     </div>
                     <div id="tech-other">
                         <h3>Other</h3>
-                        <div>Operating systems: Windows, OSX, Ubuntu (Linux)</div>
-                        <div>Editors: Eclipse, Emacs, Sublime</div>
+                        <div>Operating systems: <em>Windows, OSX, Ubuntu (Linux)</em></div>
+                        <div>Editors: <em>Eclipse, Emacs, Sublime</em></div>
                     </div>
                 </div>
             </div>
