More work on experience page

--- a/experience/index.html
+++ b/experience/index.html
@@ -25,19 +25,24 @@
                 <div id ="tech-content">
                     <div id="languages">
                         <h3>Languages</h3>
-                        <div id="proficient">Proficient: <em>Java, Python, JavaScript, HTML</em></div>
+                        <div id="proficient">Proficient: <em>Java, Python, JavaScript, HTML, CSS</em></div>
                         <div id="prior">Prior experience: <em>PHP, SQL</em></div>
                     </div>
                     <div id="tech-other">
                         <h3>Other</h3>
                         <div>Operating systems: <em>Windows, OSX, Ubuntu (Linux)</em></div>
-                        <div>Editors: <em>Eclipse, Emacs, Sublime</em></div>
+                        <div>Editors: <em>Sublime, Eclipse, Emacs</em></div>
                     </div>
                 </div>
             </div>
             <div class="background">
                 <h2>Background</h2>
                 <em>Under construction</em>
+                <!--
+                <div id="job">
+                    <em>Job title</em>, at job location, time of job. Description.
+                </div>
+                -->
             </div>
         </div>
     </body>
