--- a/experience/index.html
+++ b/experience/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="custom-container">
             <h1>Experience</h1>
-            <span id="resume">My resume, complete with contact information, is also available <a href="Robinson_Sarah_Resume.pdf">as a PDF</a>.</span>
+            <span id="resume">My full resume, with contact information, is also available <a href="Robinson_Sarah_Resume.pdf">as a PDF</a>.</span>
             <div class="education">
                 <h2>Education</h2>
                 <div id="mhc">
@@ -37,10 +37,22 @@
             </div>
             <div class="background">
                 <h2>Background</h2>
-                <em>Under construction</em>
+                <div id="hackthenorth" class="job">
+                    <em><a href="http://hackthenorth.com/2014/" target="_blank">Hack the North</a> participant</em>, September 2014.
+                    <span class="desc">Worked in a team of four to create <a href="http://challengepost.com/software/backsafe-oggza" target="_blank">BackSafe</a>. JavaScript, <a href="https://www.parse.com/" target="_blank">Parse</a>.</span>
+                </div>
+                <div id="lits-programmer" class="job">
+                    <em>Student Web Programmer</em>, with Mt. Holyoke College Web Team, June 2014 - ongoing. 
+                    <span class="desc">Develop, support, and integrate web applications for the college website. PHP, <a href="https://www.drupal.org/" target="_blank">Drupal CMS</a>, HTML, CSS, JavaScript.</span>
+                </div>
+                <div id="cs-ta" class="job">
+                    <em>Computer Science TA</em>, with Mt. Holyoke College, Jan - May 2014.
+                    <span class="desc">Reviewed concepts such as basic data structures and debugging strategies. Java.</span>
+                </div>
                 <!--
-                <div id="job">
-                    <em>Job title</em>, at job location, time of job. Description.
+                <div id="job" class="job">
+                    <em>Job title</em>, with job location, time of job.
+                    <span class="desc">Description.</span>
                 </div>
                 -->
             </div>
