Update index page with ihart project

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
                         <span class="extra-desc">BackSafe is a Facebook app that keeps the user safe through text messages and emails.</span>
                     </div>
                 </div>
+                <div class="project ihart">
+                    <div class="project-inner">
+                        <em>iHart</em>, Fall 2014. On <a href="https://github.com/ihart-mhc/ihart" target="_blank">GitHub</a>.
+                        <span class="extra-desc">Group independent study. Creates interactions between users and programs via webcams.</span>
+                    </div>
+                </div>
                 <div class="project tetris">
                     <div class="project-inner">
                         <em>Tetris</em>, Fall 2013. On <a href="https://github.com/robinsonsarah01/java-tetris" target="_blank">GitHub</a>.
@@ -41,7 +47,7 @@
                 <div class="project project-name">
                     <div class="project-inner">
                         <em>Project name</em>. On <a href="" target="_blank">website</a>.
-                        <span class="extra-desc>Extended description.</span>
+                        <span class="extra-desc">Extended description.</span>
                     </div>
                 </div>
                 -->
