Update experience page with most recent work

--- a/experience/index.html
+++ b/experience/index.html
@@ -37,16 +37,24 @@
             </div>
             <div class="background">
                 <h2>Background</h2>
+                <div id="google-seattle" class="job">
+                    <em>Software Engineering Intern</em>, Google, May - August 2015.
+                    <span class="desc">Working with one of the Google Maps teams in Seattle.</span>
+                </div>
+                <div id="ihart-study" class="job">
+                    <em>Independent Study</em>, <a href="http://ihart-mhc.github.io/" target="_blank">iHart project</a>, Mt. Holyoke College, September - December 2014.
+                    <span class="desc">Worked on improving the server and created a basic website for the project. Python, <a href="http://docs.opencv.org/index.html" target="_blank">OpenCV Server</a>, <a href="http://jekyllrb.com/docs/usage/" target="_blank">Jekyll</a>.</span>
+                </div>
                 <div id="hackthenorth" class="job">
                     <em><a href="http://hackthenorth.com/2014/" target="_blank">Hack the North</a> participant</em>, September 2014.
                     <span class="desc">Worked in a team of four to create <a href="http://challengepost.com/software/backsafe-oggza" target="_blank">BackSafe</a>. JavaScript, <a href="https://www.parse.com/" target="_blank">Parse</a>.</span>
                 </div>
                 <div id="lits-programmer" class="job">
-                    <em>Student Web Programmer</em>, with Mt. Holyoke College Web Team, June 2014 - ongoing. 
+                    <em>Student Web Programmer</em>, Mt. Holyoke College Web Team, June 2014 - ongoing. 
                     <span class="desc">Develop, support, and integrate web applications for the college website. PHP, <a href="https://www.drupal.org/" target="_blank">Drupal CMS</a>, HTML, CSS, JavaScript.</span>
                 </div>
                 <div id="cs-ta" class="job">
-                    <em>Computer Science TA</em>, with Mt. Holyoke College, January - May 2014.
+                    <em>Computer Science TA</em>, Mt. Holyoke College, January - May 2014.
                     <span class="desc">Reviewed concepts such as basic data structures and debugging strategies. Java.</span>
                 </div>
                 <!--
