--- a/experience/index.html
+++ b/experience/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="custom-container">
             <h1>Experience</h1>
-            <span id="resume">My full resume, with contact information, is also available <a href="Robinson_Sarah_Resume.pdf">as a PDF</a>.</span>
+            <span id="resume">My full resume, with contact information, is also available <a href="Sarah_Robinson_Resume.pdf">as a PDF</a>.</span>
             <div class="education">
                 <h2>Education</h2>
                 <div id="mhc">
@@ -37,12 +37,16 @@
             </div>
             <div class="background">
                 <h2>Background</h2>
+                <div id="mhc-mage" class="job">
+                    <em><a href="https://www.mtholyoke.edu/media/google-funds-new-computer-science-initiative">MaGE Program</a></em>, Mt. Holyoke College, September 2015 - ongoing.
+                    <span class="desc">Participating as a mentor in an initiative to increase retention of women in computer science programs.</span>
+                </div>
                 <div id="google-seattle" class="job">
-                    <em>Software Engineering Intern</em>, Google, May - August 2015.
-                    <span class="desc">Working with one of the Google Maps teams in Seattle.</span>
+                    <em>Software Engineering Intern</em>, Google, Summer 2015.
+                    <span class="desc">Worked with one of the Google Maps teams to add a feature to StreetView for Google Maps for Android. Java.</span>
                 </div>
                 <div id="ihart-study" class="job">
-                    <em>Independent Study</em>, <a href="http://ihart-mhc.github.io/" target="_blank">iHart project</a>, Mt. Holyoke College, September - December 2014.
+                    <em>Independent Study</em>, <a href="http://ihart-mhc.github.io/" target="_blank">iHart project</a>, Mt. Holyoke College, Fall 2014.
                     <span class="desc">Worked on improving the server and created a basic website for the project. Python, <a href="http://docs.opencv.org/index.html" target="_blank">OpenCV Server</a>, <a href="http://jekyllrb.com/docs/usage/" target="_blank">Jekyll</a>.</span>
                 </div>
                 <div id="hackthenorth" class="job">
@@ -54,7 +58,7 @@
                     <span class="desc">Develop, support, and integrate web applications for the college website. PHP, <a href="https://www.drupal.org/" target="_blank">Drupal CMS</a>, HTML, CSS, JavaScript.</span>
                 </div>
                 <div id="cs-ta" class="job">
-                    <em>Computer Science TA</em>, Mt. Holyoke College, January - May 2014.
+                    <em>Computer Science TA</em>, Mt. Holyoke College, Spring 2014.
                     <span class="desc">Reviewed concepts such as basic data structures and debugging strategies. Java.</span>
                 </div>
                 <!--
