Remove Java Tetris project from homepage.

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
                         <span class="extra-desc">Group independent study. Creates interactions between users and programs via webcams.</span>
                     </div>
                 </div>
-                <div class="project tetris">
+                <!--div class="project tetris">
                     <div class="project-inner">
                         <em>Tetris</em>, Fall 2013. On <a href="https://github.com/robinsonsarah01/java-tetris" target="_blank">GitHub</a>.
                         <span class="extra-desc">Tetris, implemented in Java. Contains both a command-line text-only version and a GUI version.</span>
                     </div>
-                </div>
+                </div-->
                 <!--
                 <div class="project project-name">
                     <div class="project-inner">
