Minor updates to experience page.

--- a/experience/index.html
+++ b/experience/index.html
@@ -38,12 +38,12 @@
             <div class="background">
                 <h2>Background</h2>
                 <div id="mhc-mage" class="job">
-                    <em><a href="https://www.mtholyoke.edu/media/google-funds-new-computer-science-initiative">MaGE Program</a></em>, Mt. Holyoke College, September 2015 - ongoing.
-                    <span class="desc">Participating as a mentor in an initiative to increase retention of women in computer science programs.</span>
+                    <em><a href="https://www.mtholyoke.edu/media/google-funds-new-computer-science-initiative">MaGE Program</a></em>, Mt. Holyoke College, Fall 2015.
+                    <span class="desc">Mentored students as part of an initiative to increase retention of women in computer science programs.</span>
                 </div>
                 <div id="google-seattle" class="job">
                     <em>Software Engineering Intern</em>, Google, Summer 2015.
-                    <span class="desc">Worked with one of the Google Maps teams to add a feature to StreetView for Google Maps for Android. Java.</span>
+                    <span class="desc">Worked with a Google Maps team to add a feature to StreetView for Google Maps for Android. Java.</span>
                 </div>
                 <div id="ihart-study" class="job">
                     <em>Independent Study</em>, <a href="http://ihart-mhc.github.io/" target="_blank">iHart project</a>, Mt. Holyoke College, Fall 2014.
