Update projects and experience.

--- a/experience/index.html
+++ b/experience/index.html
@@ -13,7 +13,7 @@
                 <h2>Education</h2>
                 <div id="mhc">
                     <!--img src="mhc-logo.png" /-->
-                    <span class="desc"><em>Mount Holyoke College</em>: Bachelor's degree in Computer Science, expected 2017.</span>
+                    <span class="desc"><em>Mount Holyoke College</em>: Bachelor's degree in Computer Science, minor in Mathematics, expected 2017.</span>
                 </div>
                 <div id="stuyvesant">
                     <!--img src="stuy-logo.png" /-->
@@ -37,6 +37,10 @@
             </div>
             <div class="background">
                 <h2>Background</h2>
+                <div id="google-la" class="job">
+                    <em>Software Engineering Intern</em>, Google, Summer 2016.
+                    <span class="desc">Project to be determined.</span>
+                </div>
                 <div id="mhc-mage" class="job">
                     <em><a href="https://www.mtholyoke.edu/media/google-funds-new-computer-science-initiative">MaGE Program</a></em>, Mt. Holyoke College, Fall 2015.
                     <span class="desc">Mentored students as part of an initiative to increase retention of women in computer science programs.</span>
@@ -45,17 +49,17 @@
                     <em>Software Engineering Intern</em>, Google, Summer 2015.
                     <span class="desc">Worked with a Google Maps team to add a feature to StreetView for Google Maps for Android. Java.</span>
                 </div>
+                <div id="lits-programmer" class="job">
+                    <em>Student Web Programmer</em>, Mt. Holyoke College Web Team, June 2014 - ongoing. 
+                    <span class="desc">Develop, support, and integrate web applications for the college website. PHP, <a href="https://www.drupal.org/" target="_blank">Drupal CMS</a>, HTML, CSS, JavaScript.</span>
+                </div>
                 <div id="ihart-study" class="job">
-                    <em>Independent Study</em>, <a href="http://ihart-mhc.github.io/" target="_blank">iHart project</a>, Mt. Holyoke College, Fall 2014.
+                    <em>Independent Study</em>, <a href="http://ihart-mhc.github.io/" target="_blank">iHart project</a>, Mt. Holyoke College, Fall 2014, Spring 2016.
                     <span class="desc">Worked on improving the server and created a basic website for the project. Python, <a href="http://docs.opencv.org/index.html" target="_blank">OpenCV Server</a>, <a href="http://jekyllrb.com/docs/usage/" target="_blank">Jekyll</a>.</span>
                 </div>
                 <div id="hackthenorth" class="job">
                     <em><a href="http://hackthenorth.com/2014/" target="_blank">Hack the North</a> participant</em>, September 2014.
                     <span class="desc">Worked in a team of four to create <a href="http://challengepost.com/software/backsafe-oggza" target="_blank">BackSafe</a>. JavaScript, <a href="https://www.parse.com/" target="_blank">Parse</a>.</span>
-                </div>
-                <div id="lits-programmer" class="job">
-                    <em>Student Web Programmer</em>, Mt. Holyoke College Web Team, June 2014 - ongoing. 
-                    <span class="desc">Develop, support, and integrate web applications for the college website. PHP, <a href="https://www.drupal.org/" target="_blank">Drupal CMS</a>, HTML, CSS, JavaScript.</span>
                 </div>
                 <div id="cs-ta" class="job">
                     <em>Computer Science TA</em>, Mt. Holyoke College, Spring 2014.
