--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
             </div>
             <div class="projects">
                 <h2>Recent Projects</h2>
+                <div class="project ihart-2">
+                    <div class="project-inner">
+                        <em>iHart</em>, Spring 2016. On <a href="https://github.com/ihart-mhc/ihart" target="_blank">GitHub</a>.
+                        <span class="extra-desc">Solo independent study. Creates interactions between users and programs via webcams.</span>
+                    </div>
+                </div>
+                <div class="project politeness">
+                    <div class="project-inner">
+                        <em>Politeness Gauge</em> for Natural Language Processing, Spring 2015.
+                        On <a href="https://github.com/robinsonsarah01/politeness-gauge" target="_blank">GitHub</a>.
+                        <span class="extra-desc">A tool for measuring how polite and professional your emails are.</span>
+                    </div>
+                </div>
                 <div class="project routeplanner">
                     <div class="project-inner">
                         <em>Routeplanner</em> for Artificial Intelligence, Fall 2014.
