--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <h1>Sarah Robinson</h1>
             
-            <div class="description flow-text">
+            <div class="flow-text">
                 Computer science student and software developer.
                 I'm currently a student web programmer at <a href="https://www.mtholyoke.edu" target="_blank">Mount Holyoke College</a>.
                 Feel free to take a look at my <a href="/experience">experience</a>, or find me on <a href="https://github.com/robinsonsarah01">GitHub</a>.
@@ -24,7 +24,7 @@
                 <div class="col s12 m6 l6">
                     <div class="card">
                         <div class="card-image">
-                            <img src="img/ihart-repo.png" />
+                            <img src="img/ihart-server.png" />
                         </div>
                         <div class="card-content">
                             <span class="card-title">iHart</span>
@@ -84,7 +84,7 @@
                 <div class="col s12 m6 l4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="img/ihart-server.png" />
+                            <img src="img/ihart-logo.png" />
                         </div>
                         <div class="card-content">
                             <span class="card-title">iHart</span>
