More updates to experience page.

--- a/experience/index.html
+++ b/experience/index.html
@@ -33,68 +33,68 @@
             <h2>Skills</h2>
             <ul class="collection">
                 <li class="collection-item">Languages
-                    <span class="chip">
-                        <img src="java-logo.png"/>
+                    <span class="chip z-depth-1">
+                        <img src="java-logo.jpg"/>
                         Java
                     </span>
-                    <span class="chip">
+                    <span class="chip z-depth-1">
                         <img src="python-logo.png" />
                         Python
                     </span>
-                    <span class="chip">
+                    <span class="chip z-depth-1">
                         <img src="javascript-logo.png" />
                         JavaScript
                     </span>
-                    <span class="chip">
+                    <span class="chip z-depth-1">
                         <img src="html-logo.png" />
                         HTML
                     </span>
-                    <span class="chip">
+                    <span class="chip z-depth-1">
                         <img src="css-logo.png" />
                         CSS
                     </span>
-                    <span class="chip">
+                    <span class="chip z-depth-1">
                         <img src="php-logo.png" />
                         PHP
                     </span>
-                    <span class="chip">
+                    <span class="chip z-depth-1">
                         <img src="sql-logo.png" />
                         SQL
                     </span>
                 </li>
                 <li class="collection-item">Operating systems
-                    <span class="chip">Windows</span>
-                    <span class="chip">OS X</span>
-                    <span class="chip">Ubuntu (Linux)</span>
+                    <span class="chip z-depth-1">Windows</span>
+                    <span class="chip z-depth-1">OS X</span>
+                    <span class="chip z-depth-1">Ubuntu (Linux)</span>
                 </li>
                 <li class="collection-item">Editors</span>
-                    <span class="chip">Sublime</span>
-                    <span class="chip">Eclipse</span>
-                    <span class="chip">Emacs</span>
+                    <span class="chip z-depth-1">Sublime</span>
+                    <span class="chip z-depth-1">Eclipse</span>
+                    <span class="chip z-depth-1">Emacs</span>
                 </li>
             </ul>
             
             <h2>Experience</h2>
-            <ul class="collection">
-                <li class="collection-item">
-                    <em>Software Engineering Intern</em>, Google, Summer 2016.
-                    <span class="desc">Streamlined the quality analysis workflow for one type of advertisement by adding new functionality to a testing tool. JavaScript, Python, Google App Engine.</span>
+            <ul class="collapsible z-depth-0" data-collapsible="accordion">
+                <li>
+                    <div class="collapsible-header active waves-effect">Software Engineering Intern, Google, Summer 2016.</div>
+                    <div class="collapsible-body"><p>Streamlined the quality analysis workflow for one type of advertisement by adding new functionality to a testing tool. JavaScript, Python, Google App Engine.</p></div>
                 </li>
-                <li class="collection-item">
-                    <em><a href="https://www.mtholyoke.edu/media/google-funds-new-computer-science-initiative">MaGE Program</a></em>, Mt. Holyoke College, Fall 2015.
-                    <span class="desc">Mentored students as part of an initiative to increase retention of women in computer science programs.</span>
+                <li>
+                    <div class="collapsible-header waves-effect"><a href="https://www.mtholyoke.edu/media/google-funds-new-computer-science-initiative">MaGE Program</a>, Mt. Holyoke College, Fall 2015.</div>
+                    <div class="collapsible-body"><p>Mentored students as part of an initiative to increase retention of women in computer science programs.</p></div>
                 </li>
-                <li class="collection-item">
-                    <em>Software Engineering Intern</em>, Google, Summer 2015.
-                    <span class="desc">Worked with a Google Maps team to add a feature to StreetView for Google Maps for Android. Java.</span>
+                <li>
+                    <div class="collapsible-header waves-effect">Software Engineering Intern, Google, Summer 2015.</div>
+                    <div class="collapsible-body"><p>Worked with a Google Maps team to add a feature to StreetView for Google Maps for Android. Java.</p></div>
                 </li>
-                <li class="collection-item">
-                    <em>Student Web Programmer</em>, Mt. Holyoke College Web Team, June 2014 - ongoing. 
-                    <span class="desc">Develop, support, and integrate web applications for the college website. PHP, <a href="https://www.drupal.org/" target="_blank">Drupal CMS</a>, HTML, CSS, JavaScript.</span>
+                <li>
+                    <div class="collapsible-header waves-effect">Student Web Programmer, Mt. Holyoke College Web Team, June 2014 - ongoing.</div>
+                    <div class="collapsible-body"><p>Develop, support, and integrate web applications for the college website. PHP, <a href="https://www.drupal.org/" target="_blank">Drupal CMS</a>, HTML, CSS, JavaScript.</p></div>
                 </li>
-                <li class="collection-item">
-                    <em>Computer Science TA</em>, Mt. Holyoke College, Spring 2014.
-                    <span class="desc">Reviewed concepts such as basic data structures and debugging strategies. Java.</span>
+                <li>
+                    <div class="collapsible-header waves-effect">Computer Science TA, Mt. Holyoke College, Spring 2014.</div>
+                    <div class="collapsible-body"><p>Reviewed concepts such as basic data structures and debugging strategies. Java.</p></div>
                 </li>
             </ul>
             
