--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
             <div class="flow-text">
                 Computer science student and software developer.
                 <br />
-                I'm currently a student web programmer at <a href="https://www.mtholyoke.edu" target="_blank">Mount Holyoke College</a>.
-                Feel free to take a look at my <a href="#experience">experience</a>, or find me on <a href="https://github.com/robinsonsarah01">GitHub</a>.
+                I'm currently a student web programmer at <a href="https://www.mtholyoke.edu" target="_blank">Mount Holyoke College</a>.<br />
+                You can find me on <a href="https://github.com/robinsonsarah01">GitHub</a>, and
+                my full resume is also available <a href="Sarah_Robinson_Resume.pdf">as a PDF</a>.
             </div>
 
-            <h2>Projects</h2>
+            <h3>Projects</h3>
 
             <div class="projects row">
                 <div class="col s12 m6 l6">
@@ -29,7 +30,7 @@
                         </div>
                         <div class="card-content">
                             <span class="card-title">iHart</span>
-                            <p>Independent study, Spring 2016. Creates interactions between users and programs via webcams.
+                            <p>Independent study, Spring 2016 and Spring 2017. Creates interactions between users and programs via webcams.
                         </div>
                         <div class="card-action">
                             <a href="https://github.com/ihart-mhc/ihart" target="_blank">GitHub</a>
@@ -83,9 +84,6 @@
                 </div>
             </div>
 
-            <h2 id="experience">Experience</h2>
-            <div class="flow-text">My full resume, with contact information, is also available <a href="Sarah_Robinson_Resume.pdf">as a PDF</a>.</div>
-
             <h3>Education</h3>
             <ul class="collection">
                 <li class="collection-item avatar">
@@ -102,51 +100,7 @@
                 </li>
             </ul>
 
-            <h3>Skills</h3>
-            <ul class="collection">
-                <li class="collection-item">Languages
-                    <span class="chip z-depth-1">
-                        <img src="img/java-logo.jpg"/>
-                        Java
-                    </span>
-                    <span class="chip z-depth-1">
-                        <img src="img/python-logo.png" />
-                        Python
-                    </span>
-                    <span class="chip z-depth-1">
-                        <img src="img/javascript-logo.png" />
-                        JavaScript
-                    </span>
-                    <span class="chip z-depth-1">
-                        <img src="img/php-logo.png" />
-                        PHP
-                    </span>
-                    <span class="chip z-depth-1">
-                        <img src="img/html-logo.png" />
-                        HTML
-                    </span>
-                    <span class="chip z-depth-1">
-                        <img src="img/css-logo.png" />
-                        CSS
-                    </span>
-                    <span class="chip z-depth-1">
-                        <img src="img/sql-logo.png" />
-                        SQL
-                    </span>
-                </li>
-                <li class="collection-item">Operating systems
-                    <span class="chip z-depth-1">Windows</span>
-                    <span class="chip z-depth-1">OS X</span>
-                    <span class="chip z-depth-1">Ubuntu (Linux)</span>
-                </li>
-                <li class="collection-item">Editors</span>
-                    <span class="chip z-depth-1">Sublime</span>
-                    <span class="chip z-depth-1">Eclipse</span>
-                    <span class="chip z-depth-1">Emacs</span>
-                </li>
-            </ul>
-
-            <h3>Previous Work</h3>
+            <h3>Experience</h3>
             <ul class="collapsible z-depth-0" data-collapsible="accordion">
                 <li>
                     <div class="collapsible-header active waves-effect">Software Engineering Intern, Google, Summer 2016.</div>
