Graduation happened :tada:

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <h1>Sarah Robinson</h1>
 
             <div class="flow-text">
-                Computer science student and software developer.
+                Software developer.
                 <br />
-                I'm currently a student web programmer at <a href="https://www.mtholyoke.edu" target="_blank">Mount Holyoke College</a>.<br />
+                <!--I'm currently a student web programmer at <a href="https://www.mtholyoke.edu" target="_blank">Mount Holyoke College</a>.<br /-->
                 You can find me on <a href="https://github.com/robinsonsarah01">GitHub</a>, and
                 my full resume is also available <a href="Sarah_Robinson_Resume.pdf">as a PDF</a>.
             </div>
@@ -90,13 +90,13 @@
                     <img src="img/mhc-logo.png" alt="Mount Holyoke College logo" class="circle" />
                     <span class="title">Mount Holyoke College</span>
                     <p>Bachelor's degree in Computer Science, minor in Mathematics.
-                    <br>Expected May 2017.
+                    <br>May 2017, magna cum laude.
                 </li>
                 <li class="collection-item avatar">
                     <img src="img/stuy-logo.png" alt="Stuyvesant High School logo" class="circle" />
                     <span class="title">Stuyvesant High School</span>
                     <p>Advanced Regents High School Diploma
-                    <br>Received June 2013.
+                    <br>June 2013.
                 </li>
             </ul>
 
@@ -115,8 +115,11 @@
                     <div class="collapsible-body"><p>Worked with a Google Maps team to add a feature to StreetView for Google Maps for Android. Java.</p></div>
                 </li>
                 <li>
-                    <div class="collapsible-header waves-effect">Student Web Programmer, Mt. Holyoke College Web Team, June 2014 - ongoing.</div>
-                    <div class="collapsible-body"><p>Develop, support, and integrate web applications for the college website. PHP, <a href="https://www.drupal.org/" target="_blank">Drupal CMS</a>, HTML, CSS, JavaScript.</p></div>
+                    <div class="collapsible-header waves-effect">Student Web Programmer, Mt. Holyoke College Web Team, June 2014 - May 2017.</div>
+                    <div class="collapsible-body">
+                    	<p>Pioneered effort to launch a <a href="https://map.mtholyoke.edu/">new campus map</a>. Python, JavaScript, Google Maps API. <br /><br /> <!-- Double break for spacing -->
+                   		Develop, support, and integrate web applications for the college website. PHP, <a href="https://www.drupal.org/" target="_blank">Drupal CMS</a>, HTML, CSS, JavaScript.</p>
+                    </div>
                 </li>
                 <li>
                     <div class="collapsible-header waves-effect">Computer Science TA, Mt. Holyoke College, Spring 2014.</div>
