Remove extremely old projects (and now obsolete images and javascript).
Bump experience above education and add what I've been doing for the, uh, last 8 years.

--- a/index.html
+++ b/index.html
@@ -13,76 +13,44 @@
             <h1>Sarah Robinson</h1>
 
             <div class="flow-text">
-                Software developer.
+                Software Engineer.
                 <br />
-                <!--I'm currently a student web programmer at <a href="https://www.mtholyoke.edu" target="_blank">Mount Holyoke College</a>.<br /-->
-                You can find me on <a href="https://github.com/robinsonsarah01">GitHub</a>, and
-                my full resume is also available <a href="Sarah_Robinson_Resume.pdf">as a PDF</a>.
+                You can find me on <a href="https://www.linkedin.com/in/sarah-robinson-01075578/">LinkedIn</a>.
+                My full resume is also available <a href="Sarah_Robinson_Resume.pdf">as a PDF</a>.
             </div>
 
-            <h3>Projects</h3>
-
-            <div class="projects row">
-                <div class="col s12 m6 l6">
-                    <div id="ihart-16" class="card">
-                        <div class="card-image">
-                            <img src="img/ihart-server.png" />
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title">iHart</span>
-                            <p>Independent study, Spring 2016 and Spring 2017. Creates interactions between users and programs via webcams.
-                        </div>
-                        <div class="card-action">
-                            <a href="https://github.com/ihart-mhc/ihart" target="_blank">GitHub</a>
-                        </div>
+            <h3>Experience</h3>
+            <ul class="collapsible z-depth-0" data-collapsible="accordion">
+                <li>
+                    <div class="collapsible-header active waves-effect">Software Engineer, Google, August 2017 - Present.</div>
+                    <div class="collapsible-body"><p>Individual contributor and Tech Lead for the
+                        <a href="https://cloud.google.com/load-balancing/docs/passthrough-network-load-balancer" target="_blank">
+                        External Passthrough Network Loadbalancing</a> team. Distrubted systems with a networking flavor; C++, Python, Golang.</p></div>
+                </li>
+                <li>
+                    <div class="collapsible-header waves-effect">Student Web Programmer, Mt. Holyoke College Web Team, June 2014 - May 2017.</div>
+                    <div class="collapsible-body">
+                        <p>Pioneered effort to launch a <a href="https://map.mtholyoke.edu/">new campus map</a>. Python, JavaScript, Google Maps API. <br /><br /> <!-- Double break for spacing -->
+                        Develop, support, and integrate web applications for the college website. PHP, <a href="https://www.drupal.org/" target="_blank">Drupal CMS</a>, HTML, CSS, JavaScript.</p>
                     </div>
-                </div>
-
-                <div class="col s12 m6 l6">
-                    <div id="politeness" class="card">
-                        <div class="card-image">
-                            <img src="img/politeness-gauge.png" />
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title">Politeness Gauge</span>
-                            <p>For Natural Language Processing, Spring 2015. A tool for measuring how polite and professional your emails are.
-                        </div>
-                        <div class="card-action">
-                            <a href="https://github.com/robinsonsarah01/politeness-gauge" target="_blank">GitHub</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col s12 m6 l6">
-                    <div id="routeplanner" class="card">
-                        <div class="card-image">
-                            <img src="img/routeplanner-dataset.png" />
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title">Routeplanner</span>
-                            <p> For Artificial Intelligence, Fall 2014. A custom wayfinder for motorcyclists based on road curvature.
-                        </div>
-                        <div class="card-action">
-                            <a href="https://github.com/robinsonsarah01/routeplanner" target="_blank">GitHub</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col s12 m6 l6">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="img/backsafe-home.png" />
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title">BackSafe</span>
-                            <p> At Hack The North, September 2014. A Facebook app that keeps the user safe through text messages and emails.
-                        </div>
-                        <div class="card-action">
-                            <a href="http://devpost.com/software/backsafe-oggza" target="_blank">DevPost</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                </li>
+                <li>
+                    <div class="collapsible-header waves-effect">Software Engineering Intern, Google, Summer 2016.</div>
+                    <div class="collapsible-body"><p>Streamlined the quality analysis workflow for a particular ad format by adding new functionality to a testing tool. JavaScript, Python, Google App Engine.</p></div>
+                </li>
+                <li>
+                    <div class="collapsible-header waves-effect"><a href="https://www.mtholyoke.edu/media/google-funds-new-computer-science-initiative">MaGE Program mentor</a>, Mt. Holyoke College, Fall 2015 and Fall 2016.</div>
+                    <div class="collapsible-body"><p>Mentored students in introductory courses as part of an initiative to increase retention of women in computer science programs.</p></div>
+                </li>
+                <li>
+                    <div class="collapsible-header waves-effect">Software Engineering Intern, Google, Summer 2015.</div>
+                    <div class="collapsible-body"><p>Worked with a Google Maps team to add a feature to StreetView for Google Maps for Android. Java.</p></div>
+                </li>
+                <li>
+                    <div class="collapsible-header waves-effect">Computer Science TA, Mt. Holyoke College, Spring 2014.</div>
+                    <div class="collapsible-body"><p>Reviewed concepts such as basic data structures and debugging strategies. Java.</p></div>
+                </li>
+            </ul>
 
             <h3>Education</h3>
             <ul class="collection">
@@ -99,37 +67,11 @@
                     <br>June 2013.
                 </li>
             </ul>
-
-            <h3>Experience</h3>
-            <ul class="collapsible z-depth-0" data-collapsible="accordion">
-                <li>
-                    <div class="collapsible-header active waves-effect">Software Engineering Intern, Google, Summer 2016.</div>
-                    <div class="collapsible-body"><p>Streamlined the quality analysis workflow for a particular ad format by adding new functionality to a testing tool. JavaScript, Python, Google App Engine.</p></div>
-                </li>
-                <li>
-                    <div class="collapsible-header waves-effect"><a href="https://www.mtholyoke.edu/media/google-funds-new-computer-science-initiative">MaGE Program</a>, Mt. Holyoke College, Fall 2015 and Fall 2016.</div>
-                    <div class="collapsible-body"><p>Mentored students in introductory courses as part of an initiative to increase retention of women in computer science programs.</p></div>
-                </li>
-                <li>
-                    <div class="collapsible-header waves-effect">Software Engineering Intern, Google, Summer 2015.</div>
-                    <div class="collapsible-body"><p>Worked with a Google Maps team to add a feature to StreetView for Google Maps for Android. Java.</p></div>
-                </li>
-                <li>
-                    <div class="collapsible-header waves-effect">Student Web Programmer, Mt. Holyoke College Web Team, June 2014 - May 2017.</div>
-                    <div class="collapsible-body">
-                    	<p>Pioneered effort to launch a <a href="https://map.mtholyoke.edu/">new campus map</a>. Python, JavaScript, Google Maps API. <br /><br /> <!-- Double break for spacing -->
-                   		Develop, support, and integrate web applications for the college website. PHP, <a href="https://www.drupal.org/" target="_blank">Drupal CMS</a>, HTML, CSS, JavaScript.</p>
-                    </div>
-                </li>
-                <li>
-                    <div class="collapsible-header waves-effect">Computer Science TA, Mt. Holyoke College, Spring 2014.</div>
-                    <div class="collapsible-body"><p>Reviewed concepts such as basic data structures and debugging strategies. Java.</p></div>
-                </li>
-            </ul>
         </div>
 
-        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+        crossorigin="anonymous"></script>
         <script type="text/javascript" src="js/materialize.min.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
